As per ticket #21 @ qubes hub, added left margin for comments reply fieldset to avoid shifts on window resize

--- a/media/system/less/comments.less
+++ b/media/system/less/comments.less
@@ -305,7 +305,7 @@
 	#commentform {
 		margin: 0;
 		padding: 0;
-
+		
 		fieldset {
 			margin: 0;
 			text-align: left;
@@ -363,6 +363,9 @@
 					padding: 0 1em;
 				}
 			}
+		}
+		p.comment-member-photo + fieldset {
+			margin-left: 70px;
 		}
 
 		p.comment-member-photo {
